hphp/test/zend/bad/tests/security/open_basedir_stat.php
<?php
require_once "open_basedir.inc";
test_open_basedir_array("stat");
?>
<?php
require_once "open_basedir.inc";
delete_directories();
?>